<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/super_light_grey"
    android:elevation="8dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/clinicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clinicName"
            android:textColor="@color/light_orange"
            android:textSize="25sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/gps"
            android:layout_toStartOf="@+id/txtClinicLoc" />

        <TextView
            android:id="@+id/txtClinicLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/clinicLoc"
            android:textSize="16sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitNPF"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/rs"/>

    </RelativeLayout>



</LinearLayout>