<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/docaidlogo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_rect"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="20sp"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:passwordToggleEnabled="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/frgtPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/frgt"
                android:textColor="#C50404"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#1A93C3"
                android:elevation="5dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:icon="@drawable/btn_login_add"
                app:iconGravity="textStart"
                app:iconSize="30dp"
                app:elevation="4dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>